--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
             <ul>
                 <li><span class="quiz-definition" data-term="保护环 (Guard Ring) 的作用是？"><strong>Guard Ring (保护环)</strong>: 增加面积，用于防止闩锁效应(latch-up)。</span></li>
                 <li><span class="quiz-definition" data-term="H树或骨干网络 (H-Tree or Spine) 的作用是？"><strong>H-Tree or Spine (H树或骨干网络)</strong>: 用于减小时钟偏移(clock skew)。</span></li>
-                <li><span class="quiz-definition" data-term="条带状金属层 (Striped Metal Layers) 的作用是？"><strong>Striped Metal Layers (条带状金属层)</strong>: 用于构建稳健的电源网络，减小IR压降。</span></li>
+                <li><span class="quiz-definition" data-term="条带状金属层 (Striped Metal Layers) 的作用是？"><strong>Striped Metal Layers (条带状金属层)</strong>: 用于均匀分布电源，减小IR压降。</span></li>
                 <li><span class="quiz-definition" data-term="增加走线宽度 (Increased track width) 的作用是？"><strong>Increased track width (增加走线宽度)</strong>: 用于降低电阻或提高载流能力。</span></li>
                 <li><span class="quiz-definition" data-term="折叠式版图 (Folded Layout) 的作用是？"><strong>Folded Layout (折叠式版图)</strong>: 显著<strong>减小单元面积</strong>。</span></li>
             </ul>
