--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="src/css/styles.css">
     
     <!-- Preload critical resources -->
-    <link rel="preload" href="config.js" as="script">
-    <link rel="preload" href="content.js" as="script">
-    <link rel="preload" href="app.js" as="script">
+    <link rel="preload" href="src/js/config.js" as="script">
+    <link rel="preload" href="src/js/content.js" as="script">
+    <link rel="preload" href="src/js/app.js" as="script">
 </head>
 <body>
     <!-- Language Switch Button -->
@@ -57,8 +57,8 @@
        aria-label="Back to top" role="button" tabindex="0">↑</a>
 
     <!-- Scripts -->
-    <script src="config.js"></script>
-    <script src="content.js"></script>
-    <script src="app.js"></script>
+    <script src="src/js/config.js"></script>
+    <script src="src/js/content.js"></script>
+    <script src="src/js/app.js"></script>
 </body>
 </html> 
